# dmrid_lookup

./: .gitignore  .python-semantic-release  .releaserc  CHANGELOG.md  README.md  dmrid_lookup.py  ids.csv  license  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: release-drafter.yml
.github/workflows/: .python-semantic-release  draft-release.yml  main.yml  publish.yml  release.yml  semantic-release.yml  test.yml
dmrid_lookup/: __init__.py  dmrid_lookup.py
scripts/: dmrid_lookup-cli.py
tests/: test_dmrid_lookup.py
