[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[semantic_release]
version_variable = "dmrid_lookup.py:__version__"  # Adjust this if your version variable is in a different file
branch = "main"  # The main branch for version releases
upload_to_pypi = true  # Enable PyPI upload
upload_to_release = true  # Enable GitHub release creation
build_command = "python -m build"  # Command to build the package
github_use_tag_release = true  # Use tags to create a release on GitHub
changelog_file = "CHANGELOG.md"  # Location of changelog file
major_on_zero = true  # Create a major release for 0.x versioning

# Optional: Additional configuration for the `tool.semantic_release`
# This section allows you to configure specific settings for the `semantic-release` plugin
[tool.semantic_release]
branches = ["main", "next", "master"]  # List of branches to trigger releases from
plugins = [
    "@semantic-release/commit-analyzer",
    "@semantic-release/release-notes-generator",
    "@semantic-release/changelog",
    "@semantic-release/git",
    "@semantic-release/github"
]

